--- a/styleyoutube.css
+++ b/styleyoutube.css
@@ -1,25 +1,3 @@
-/*media query para adpatar el sistema*/
-@media (max-width: 767px) {
-    .header {
-        flex-wrap: wrap-reverse; /* Todos los elementos en columna */       
-         align-items: center;        
-         padding: 10px;    
-        }    
-         .logo {        
-            font-size: 20px;        
-            margin-bottom: 10px;    
-        }    
-         .search-bar input {        
-            width: 10%; /* La barra de búsqueda ocupa todo el ancho */    
-        }    
-         .user-menu {           
-            gap: 5px;    
-        }
-        }
-
-@media (min-width:content) { 
-    
-}
 
 body {
     margin: 0;
@@ -33,34 +11,31 @@ html {
     scroll-behavior: smooth; 
 }
 
-
-.icon{
-    width: 10px;
+.logo img{
+    display: flex;
 }
+
 /* Header */
 .header {
+    position: relative;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     background-color: #fff;
-    padding: 10px 20px;
-   
+    padding: 6px 0px 0px 0px;
+    width: 100%;
 }
 
-.logo {
-    display: inline;
-    font-size: 24px;
-    font-weight: bold;
-    color: #ff0000;
-}
 
 .search-bar {
-    flex: 0 1 732px;
+    flex: 0 1 617px;
     display: flex;
     gap: 0px;
+    max-width: 768px;
 }
 
 .search-bar input {
+    font-family: "Roboto", arial, sans-serif;
     margin-left: 32px;
     padding: 0 4px 0 16px;
     width: 500px;
@@ -69,34 +44,52 @@ html {
     border-radius: 40px 0 0 40px;
     box-shadow: inset 0 1px 2px #eee;
     display: grid;
+    font-size: 16px;
     cursor: text;
+    align-items: center;
+    justify-content: end;
+    justify-items: end;
 }
 
 .search-bar button {
     padding: 6px;
     margin: 0;
-    width: 64px;
+    width: 67px;
+    height: 40px;
     background-color: #f8f8f8;
     border: 1px solid #d3d3d3;
     border-radius: 0 40px 40px 0;
     cursor: pointer;
 }
 
+.extrabutton{
+    display: flex;
+    overflow: hidden;
+    gap: 10px;
+    
+}
+
 .voicebutton{
     border-radius: 19px;
     padding: 10px;
-    background-color: #f8f8f8;
-    border: 1px solid #d3d3d3;
+    border: 0px;
     cursor: pointer;
+    background-color: #f1f1f1;
+    width: 45px;
 }
 
 .crearbutton{
     border-radius: 19px;
     padding: 10px;
-    background-color: #f8f8f8;
-    border: 1px solid #d3d3d3;
+    background-color: #f1f1f1;
+    border: 0px;
     cursor: pointer;
     text-align: center;
+    width: 90px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    max-width: 90px;
 }
 
 .user-menu button {
@@ -108,14 +101,15 @@ html {
 }
 
 /* Sidebar */
-.sidebar {
-    font-family: "Roboto Flex", arial, sans-serif;
+.sidebar{
+    position: absolute;
+    font-family: "Roboto", arial, sans-serif;
     line-height: 1em;
     font-weight: 400;
     font-size: 17px;
     width: 200px;
     background-color: #fff;
-    padding: 10px 10px 10px 30px;
+    padding: 0px 0px 10px 30px;
     box-shadow: 2px 0 5px white(0, 0, 0, 0.1);
     position: absolute;
     height: 100vh;
@@ -135,8 +129,30 @@ html {
     padding-top: 12px;
 }
 .sidebar li {
-    margin: 15px 0;
     cursor: pointer;
+}
+
+.sidebar button{
+    text-align: left;
+    font-family: "Roboto",Arial, sans-serif;
+    line-height: 1em;
+    font-weight: 400;
+    font-size: 14px;
+    width: 200px;
+    height: 35px;
+    background-color: transparent;
+    border: 0px solid #ccc;
+    cursor: pointer;
+    background-color: #fff;
+    padding: 0px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    margin: 6px;
+}
+
+.sidebar img{
+    margin: 0px 15px 0px 0px;
 }
 
 /* Main Content */
@@ -146,10 +162,11 @@ html {
 }
 
 .categories {
+    position: static;
     display: flex;
     gap: 10px;
-    margin-bottom: 20px;
-    overflow: scroll;
+    margin: 0;
+    overflow: auto;
 }
 
 .categories button {
@@ -169,11 +186,8 @@ html {
 .videos {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 10fr));
-    gap: 20px;
-    margin: 20px;
-    padding: 10px;
-    
-
+    gap: 10px;
+    margin: 0px 20px 20px -17px;   
 }
 
 .video {
@@ -212,3 +226,28 @@ a{
     padding:0px 1.4px 0px 0px ;
 }
 
+button:hover{
+    background-color: #dddbdb;
+    transition: background-color 0.5s ease;
+}
+
+button:active{
+    background-color: #9c9c9c;
+    transition: scale(0.95);
+    transition: transform 0.2s ease;
+}
+
+
+@media(max-width: 768px){
+    .header{
+        position: static;
+    }
+    .search-bar{
+        width: 30%;
+    }
+    
+    .crearbutton{
+        display: none;
+    }
+
+} 
